--- a/package.json
+++ b/package.json
@@ -18,20 +18,24 @@
         "@radix-ui/react-slot": "^1.1.0",
         "@radix-ui/react-tooltip": "^1.1.4",
         "@tanstack/react-query": "^5.62.3",
+        "@tanstack/react-query-devtools": "^5.62.8",
         "@tanstack/react-table": "^8.20.5",
         "axios": "^1.7.9",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "cookie-parser": "^1.4.7",
         "framer-motion": "^11.15.0",
         "lucide-react": "^0.462.0",
         "next-themes": "^0.4.3",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-hook-form": "^7.54.1",
         "react-icons": "^5.3.0",
         "react-router-dom": "^7.0.1",
         "sonner": "^1.7.0",
         "tailwind-merge": "^2.5.5",
-        "tailwindcss-animate": "^1.0.7"
+        "tailwindcss-animate": "^1.0.7",
+        "zustand": "^5.0.2"
     },
     "devDependencies": {
         "@eslint/js": "^9.15.0",
