--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cookie-parser": "^1.4.7",
+        "date-fns": "^4.1.0",
         "framer-motion": "^11.15.0",
         "lucide-react": "^0.462.0",
         "next-themes": "^0.4.3",
