--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@hookform/resolvers": "^3.9.1",
         "@radix-ui/react-checkbox": "^1.1.2",
         "@radix-ui/react-dialog": "^1.1.2",
         "@radix-ui/react-dropdown-menu": "^2.1.2",
-        "@radix-ui/react-label": "^2.1.0",
+        "@radix-ui/react-label": "^2.1.1",
         "@radix-ui/react-separator": "^1.1.0",
-        "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-slot": "^1.1.1",
         "@radix-ui/react-tooltip": "^1.1.4",
         "@tanstack/react-query": "^5.62.3",
         "@tanstack/react-query-devtools": "^5.62.8",
@@ -30,12 +31,13 @@
         "next-themes": "^0.4.3",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-hook-form": "^7.54.1",
+        "react-hook-form": "^7.54.2",
         "react-icons": "^5.3.0",
         "react-router-dom": "^7.0.1",
         "sonner": "^1.7.0",
         "tailwind-merge": "^2.5.5",
         "tailwindcss-animate": "^1.0.7",
+        "zod": "^3.24.1",
         "zustand": "^5.0.2"
     },
     "devDependencies": {
