--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
         "framer-motion": "^11.15.0",
         "lucide-react": "^0.462.0",
         "next-themes": "^0.4.3",
+        "quill": "^2.0.3",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.54.2",
         "react-icons": "^5.3.0",
         "react-router-dom": "^7.0.1",
+        "react-select": "^5.9.0",
         "sonner": "^1.7.0",
         "tailwind-merge": "^2.5.5",
         "tailwindcss-animate": "^1.0.7",
